devops/flux/applications/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdd-backend
  namespace: tdd-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tdd-backend
  template:
    metadata:
      labels:
        app: tdd-backend
    spec:
      serviceAccountName: tdd-backend
      containers:
        - name: backend
          image: docker.io/uditdataxis12345/tdd-react-backend:20260901082133-3b4deef # {"$imagepolicy": "flux-system:tdd-react-backend"}
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
