devops/flux/applications/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdd-backend
  namespace: tdd-backend

spec:
  selector:
    app: tdd-backend

  ports:
    - name: http
      port: 4000
      targetPort: 4000

  type: ClusterIP
