devops/flux/applications/backend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tdd-backend
  namespace: tdd-backend
spec:
  parentRefs:
    - name: tdd-gateway
      namespace: envoy-gateway-system

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: tdd-backend
          port: 4000
